cmd/sphinx-plugin/k8s/02-sphinx-plugin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphinx-plugin
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sphinx-plugin
  template:
    metadata:
      labels:
        app: sphinx-plugin
    spec:
      containers:
      - name: sphinx-plugin
        image: uhub.service.ucloud.cn/entropypool/sphinx-plugin:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: service-config
            mountPath: /opt/sphinx-plugin/
        volumeMounts:
          - name: host-config
            mountPath: /tmp/hosts
            subPath: proxy-host
        command: ["/bin/sh", "-c", "cat /tmp/hosts >> /etc/hosts && /usr/local/bin/sphinx-plugin run"]
      volumes:
        - name: service-config
          configMap:
            name: sphinx-plugin-config
            items:
              - key: service-conf
                path: SphinxPlugin.viper.yaml
        - name: host-config
          configMap:
            name: pluginproxyconfig
