cmd/sphinx-plugin/k8s/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sphinx-plugin-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: sphinx-plugin
    k8s.kuboard.cn/workload: sphinx-plugin
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.npool.top
    http:
      paths:
      - path: /sphinx-plugin
        backend:
          serviceName: sphinx-plugin
          servicePort: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sphinx-plugin-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: sphinx-plugin
    k8s.kuboard.cn/workload: sphinx-plugin
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.xpool.top
    http:
      paths:
      - path: /sphinx-plugin
        backend:
          serviceName: sphinx-plugin
          servicePort: http
